feat: add Leftover model, service and routes; support 'Leftovers' calendar day
